--- a/enterprise-integration-workshop3/Dockerfile
+++ b/enterprise-integration-workshop3/Dockerfile
@@ -1,7 +1,12 @@
+FROM maven:3-amazoncorretto-17 AS source
+WORKDIR /stuff
+COPY . .
+RUN mvn clean package
+
 FROM amazoncorretto:17-al2-jdk
 VOLUME /tmp
 EXPOSE 8080
-ARG JAR_FILE=target/enterprise-integration-workshop3-1.0.0-SNAPSHOT.jar
+ARG JAR_FILE=/stuff/target/enterprise-integration-workshop3-1.0.0-SNAPSHOT.jar
 WORKDIR /app
-COPY ${JAR_FILE} ./app.jar
+COPY --from=source ${JAR_FILE} ./app.jar
 ENTRYPOINT ["java", "-jar", "app.jar"]
